# Specialmaxsloof

./: CMakeLists.txt
.github/workflows/: c-ccpp.yml  c-cppppp.yml  ccpp.yml  cpp.yml
xyz.spoofer.final/: hwid.cpp  main.cpp  main.h  menus.h
xyz.spoofer.final/client/: client.cpp
xyz.spoofer.final/spoof/: spoof.cpp
xyz.spoofer.final/spoof/cleaner/: util.h
